--- a/web/public/index.html
+++ b/web/public/index.html
@@ -14,7 +14,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
-    <title>React App</title>
+    <title>Mailbadger</title>
     <style type="text/css">
       body {
         margin: 0;
